front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/netgroup: "true"
        io.kompose.service: front
    spec:
      containers:
      - args:
        - sh
        - -c
        - yarn build
        image: front
        imagePullPolicy: ""
        name: front
        ports:
        - containerPort: 3000
        resources: {}
        securityContext:
          privileged: true
        stdin: true
        volumeMounts:
        - mountPath: /usr/front
          name: front-claim0
      hostname: front
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: front-claim0
        persistentVolumeClaim:
          claimName: front-claim0
status: {}
