web-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: web-api
  name: web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/netgroup: "true"
        io.kompose.service: web-api
    spec:
      containers:
      - args:
        - python
        - /usr/web_api/v1/server.py
        image: web-api
        imagePullPolicy: ""
        name: web-api
        ports:
        - containerPort: 8000
        resources: {}
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /usr/web_api
          name: web-api-claim0
      hostname: web-api
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: web-api-claim0
        persistentVolumeClaim:
          claimName: web-api-claim0
status: {}
