db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
  - name: "3366"
    port: 3366
    targetPort: 3306
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
